Add pseudorandom games to sort

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(GameSort)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(GameSort main.cpp)
+add_executable(GameSort src/grailsort.h
+        src/main.cpp)
