--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.27)
 project(GameSort)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -std=c++20")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -Wpedantic -std=c++20")
 
 find_package(CURL REQUIRED)
 
