--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,11 @@ add_executable (GameSort2
         timsort.cpp
         timsort.h
         Game.h
-        Game.cpp)
+        Game.cpp
+        buttons.h
+        TextureManager.cpp
+        TextureManager.h
+        buttons.cpp)
 #set (SFML_STATIC_LIBRARIES TRUE)
 #set (SFML_DIR/opt/homebrew/lib/cmake/SFML/SFMLConfig.cmake)| include_directories (${SFML_INCLUDE_DIRS})
 
