Update compiler options to be stricter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.16)
 project(GameSort LANGUAGES CXX)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}../../bin/)
+set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wpedantic -std=c++20")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 
 include(FetchContent)
